# sodium-react-native

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  sodium-react-native-direct.podspec  sodium-react-native.podspec  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: sodium-jni.c
android/src/main/java/com/sodiumreactnative/: SodiumReactNativeModule.java  SodiumReactNativePackage.java
android/src/main/java/com/sodiumreactnative/helpers/: ArgumentsEx.java  ArrayUtil.java  MapUtil.java
android/src/main/java/com/sodiumreactnative/jni/: SodiumReactNative.java  SodiumReactNativeJNI.java
example/: .gitignore  app.json  babel.config.js  index.js  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx  Tests.tsx  helpers.ts
example/src/tests/: t.ts  (+1 more)
ios/: SodiumReactNative.h  SodiumReactNative.mm
libsodium/: build.sh  libsodium-1.0.19-stable.tar.gz.minisig  libsodium.org.minisign.pub
scripts/: build-library.js
src/: constants.ts  crypto_aead.ts  crypto_box.ts  crypto_core.ts  crypto_generichash.ts  crypto_hash.ts  crypto_kdf.ts  crypto_kx.ts  crypto_onetimeauth.ts  crypto_pwhash.ts  crypto_scalarmult.ts  crypto_secretbox.ts  crypto_secretstream.ts  crypto_sign.ts  crypto_stream.ts  crypto_verify.ts  helpers.ts  index.ts  index.tsx  libsodium.ts  memory.ts  padding.ts  randombytes.ts  types.ts
src/__tests__/: index.test.tsx
(+30 files in other folders)
